# advent-of-code-2024

./: .gitignore  README.org  flake.nix  meson.build
src/: aoclib.c  aoclib.h  aoclib_test.c  gen_hashmap.c  gen_hashmap.h  gen_hashmap_test.c  gen_vector.h  gen_vector_test.c  hashmap.c  hashmap.h  hashmap_test.c  vector.c  vector.h  vector_test.c
src/day_01/: day_01.c
src/day_02/: day_02.c
src/day_03/: day_03.c
src/day_04/: day_04.c
src/day_05/: day_05.c
src/day_06/: day_06.c
src/day_07/: day_07.c
src/day_08/: day_08.c
